FIX: Add existing display issues
When  the add existing autocompleter appears next to the add new button on small screens, they overlap. This is a fix for that.

Also fixes namespace to include LeftAndMain css

--- a/css/elemental-admin.css
+++ b/css/elemental-admin.css
@@ -2,6 +2,18 @@
     clear: both;
 }
 
+.elemental-add-existing-autocompleter {
+    max-width: 50%;
+}
+
+.elemental-add-existing-autocompleter > span:first-child {
+    max-width: calc(100% - 117px);
+}
+
+.elemental-add-existing-autocompleter > span:first-child input {
+    max-width: 100%;
+}
+
 .cms .field input.ui-autocomplete-input.ui-autocomplete-loading {
     background-image: url(../../framework/images/progressbar_blue.gif);
     background-repeat: no-repeat;
